# beldex-launcher

./: CMakeLists.txt  Dockerfile  Dockerfile.fresh  Dockerfile.migration  Dockerfile.outdated  README.md  belnet.js  config.js  daemon.js  index.js  init.sh  launcher-docker.ini  lib.js  lib.networkTest.js  package.json  start.js  upgrading.md  web_api.js
attic/: CMakeLists.txt  README_C.md
attic/launcher/: main.cpp
attic/launcher/cmake/: CMakeLists.txt
contrib/cluster-shell/: README.md  install_into_gitroot.sh  makenode.sh  start.sh  stop.sh  wallet.sh
contrib/cluster-shell/beldexSeed/: launcher.ini
contrib/cluster-shell/beldexX/: launcher.ini
modes/: bw-test.js  check-systemd.js  client.js  download-binaries.js  download-blockchain.js  export.js  fix-perms.js  import.js  prequal.js  status.js
